[gd_scene load_steps=37 format=2]

[ext_resource path="res://Ritmic Fighter assets/Fontes/Sinister-Fonts_Foul-Fiend/Foul Fiend.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Personagens/MongeFodao/Fase4(OverInAFlash)/Game4Global.gd" type="Script" id=2]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/TilesetArenaSangueCeleste/tilesetASC.tres" type="TileSet" id=3]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo20.png" type="Texture" id=4]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo1.png" type="Texture" id=5]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo4.png" type="Texture" id=6]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo17.png" type="Texture" id=7]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo12.png" type="Texture" id=8]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo13.png" type="Texture" id=9]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo18.png" type="Texture" id=10]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo19.png" type="Texture" id=11]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo5.png" type="Texture" id=12]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo3.png" type="Texture" id=13]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo6.png" type="Texture" id=14]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo7.png" type="Texture" id=15]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo8.png" type="Texture" id=16]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo2.png" type="Texture" id=17]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo10.png" type="Texture" id=18]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo9.png" type="Texture" id=19]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo11.png" type="Texture" id=20]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo14.png" type="Texture" id=21]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo15.png" type="Texture" id=22]
[ext_resource path="res://Ritmic Fighter assets/Backgroundo/Arena Sangue celeste/Backgroundo16.png" type="Texture" id=23]
[ext_resource path="res://Scenes/Musicas(fases)/Black Ice-Municipal Waste/CountdownMW(hazardousMutationAlbum)Numero1.png" type="Texture" id=24]
[ext_resource path="res://Scenes/Musicas(fases)/Black Ice-Municipal Waste/CountdownMW(hazardousMutationAlbum)Numero3.png" type="Texture" id=25]
[ext_resource path="res://Scenes/Musicas(fases)/Black Ice-Municipal Waste/CountdownMW(hazardousMutationAlbum)NumeroGO.png" type="Texture" id=26]
[ext_resource path="res://Scenes/Musicas(fases)/Black Ice-Municipal Waste/CountdownMW(hazardousMutationAlbum)Numero2.png" type="Texture" id=27]
[ext_resource path="res://Scenes/Personagens/MongeFodao/BasePersonagemMongeFodao/MongeFodao.tscn" type="PackedScene" id=28]
[ext_resource path="res://Scenes/Musicas(fases)/OverInaFlashMAXANARCHY/OverInAFlash.tscn" type="PackedScene" id=29]
[ext_resource path="res://Scenes/Personagens/MongeFodao/Fase4(OverInAFlash)/Spawn_Inimigo(musica4)OSUdos.tscn" type="PackedScene" id=30]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 17 ), ExtResource( 13 ), ExtResource( 6 ), ExtResource( 12 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 19 ), ExtResource( 18 ), ExtResource( 20 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 25.4209, 64.7714 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 15
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
length = 4.0
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MongeFodao/countdown:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.98, 1, 1.98, 2, 2.98, 3, 3.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MongeFodao/countdown:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 25 ), ExtResource( 27 ), ExtResource( 24 ), ExtResource( 26 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.1

[node name="Game" type="Node"]
script = ExtResource( 2 )

[node name="Sprite5" type="AnimatedSprite" parent="."]
position = Vector2( 3554.72, 552.401 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )

[node name="Sprite6" type="AnimatedSprite" parent="."]
position = Vector2( 4264.86, 552 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )
flip_h = true

[node name="Sprite7" type="AnimatedSprite" parent="."]
position = Vector2( 4974.86, 552 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )

[node name="Sprite8" type="AnimatedSprite" parent="."]
position = Vector2( 5686.86, 552 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )
flip_h = true

[node name="Sprite9" type="AnimatedSprite" parent="."]
position = Vector2( 6398.09, 552 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )

[node name="Sprite10" type="AnimatedSprite" parent="."]
position = Vector2( 7106.3, 552 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )
flip_h = true

[node name="Sprite11" type="AnimatedSprite" parent="."]
position = Vector2( 7854.03, 555 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( -84.6115, -240.076 )

[node name="Sprite12" type="AnimatedSprite" parent="."]
position = Vector2( 8598.9, 555 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 6
playing = true
offset = Vector2( -84.6115, -240.076 )
flip_h = true

[node name="Sprite4" type="AnimatedSprite" parent="."]
position = Vector2( 2746.5, 192.401 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
flip_h = true

[node name="TileMap" type="TileMap" parent="."]
visible = false
scale = Vector2( 1, 1.3 )
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 54 )
format = 1
tile_data = PoolIntArray( 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 262168, 4, 0, 262169, 4, 0, 262170, 4, 0, 262171, 4, 0, 262172, 4, 0, 262173, 4, 0, 262174, 4, 0, 262175, 4, 0, 262176, 4, 0, 262177, 4, 0, 262178, 4, 0, 262179, 4, 0, 262180, 4, 0, 262181, 4, 0, 262182, 4, 0, 262183, 4, 0, 262184, 4, 0, 262185, 4, 0, 262186, 4, 0, 262187, 4, 0, 262188, 4, 0, 262189, 4, 0, 262190, 4, 0, 262191, 4, 0, 262192, 4, 0, 262193, 4, 0, 262194, 4, 0, 262195, 4, 0, 262196, 4, 0, 262197, 4, 0, 262198, 4, 0, 262199, 4, 0, 262200, 4, 0, 262201, 4, 0, 262202, 4, 0, 262203, 4, 0, 262204, 4, 0, 262205, 4, 0, 262206, 4, 0, 262207, 4, 0, 262208, 4, 0, 262209, 4, 0 )

[node name="Sprite3" type="AnimatedSprite" parent="."]
position = Vector2( 613.91, 192.401 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( 6.10352e-05, -1.52588e-05 )

[node name="Sprite2" type="AnimatedSprite" parent="."]
position = Vector2( 1324.51, 192.401 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true
offset = Vector2( 6.10352e-05, -1.52588e-05 )
flip_h = true

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 2036.48, 192.401 )
scale = Vector2( 1.17, 1.5 )
frames = SubResource( 1 )
frame = 7
playing = true

[node name="fimDeFase" type="Timer" parent="."]
wait_time = 151.0

[node name="OverInAFlash" parent="." instance=ExtResource( 29 )]
volume_db = 0.0

[node name="MongeFodao" parent="." instance=ExtResource( 28 )]
position = Vector2( 569.604, 202.488 )

[node name="spawners" type="Node2D" parent="MongeFodao"]
position = Vector2( -570.77, -202.488 )

[node name="Spawn_Inimigo direita2" parent="MongeFodao/spawners" instance=ExtResource( 30 )]
position = Vector2( 996.438, 156.005 )

[node name="danoFlorida" type="Area2D" parent="MongeFodao" groups=[
"naArea",
]]
position = Vector2( 7, 0 )

[node name="CollisionPolygon2D" type="CollisionShape2D" parent="MongeFodao/danoFlorida"]
position = Vector2( -2.44873, 29 )
shape = SubResource( 2 )

[node name="countdown" type="Sprite" parent="MongeFodao"]
position = Vector2( 105.823, -47.1448 )
rotation = 12.5664
scale = Vector2( 2, 2 )
texture = ExtResource( 25 )

[node name="ButtonRetry" type="Button" parent="MongeFodao"]
visible = false
margin_left = -29.0
margin_top = -47.0
margin_right = 239.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "Tentar Novamente"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="MongeFodao"]
visible = false
margin_left = -28.0
margin_top = -87.0
margin_right = 238.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 4 )
text = "continuar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="danoFloridaNimation" type="AnimationPlayer" parent="."]
anims/countdown = SubResource( 5 )
anims/dano = SubResource( 6 )
[connection signal="timeout" from="fimDeFase" to="." method="_on_fimDeFase_timeout"]
[connection signal="body_entered" from="MongeFodao/danoFlorida" to="." method="_on_danoFlorida_body_entered"]
[connection signal="pressed" from="MongeFodao/ButtonRetry" to="." method="_on_ButtonRetry_pressed"]
[connection signal="pressed" from="MongeFodao/ButtonQuit" to="." method="_on_ButtonQuit_pressed"]
